playbook/roles/openldap/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openldap
  namespace: itsm
spec:
  ingressClassName: nginx
  rules:
  - host: ldap.onwalk.net
    http:
      paths:
      - backend:
          service:
            name: openldap-headless
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
